fixed dark mode to work with breadcrumbs section

--- a/assets/css/dark-mode.css
+++ b/assets/css/dark-mode.css
@@ -25,3 +25,8 @@
   [data-theme="dark"] .bg-white {
     background-color: #000 !important;
   }
+  
+  [data-theme="dark"] .breadcrumbs {
+    background-color: #222 !important;
+  }
+  
